--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,39 @@
    left: 0;
    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 }
+
+
+/* MEDIA QUERY MANAGER
+
+breakpoint :
+- phone: max width 600px
+- tab-port: max width 900px
+- tab-land: max width 1200px
+- big-desktop: min width 1800px
+
+
+ORDER : base + typography --> general layout + grid --> page layout --> components
+
+*/
+
+// 1em = 16px
+
+@mixin respond($breakpoint) {
+   
+   @if $breakpoint == phone {
+      @media (max-width: 37.5em) { @content };
+   }
+
+   @if $breakpoint == tab-port {
+      @media (max-width: 56.25em) { @content };
+   }
+
+   @if $breakpoint == tab-land {
+      @media (max-width: 75em) { @content };
+   }
+
+   @if $breakpoint == big-desktop {
+     @media (min-width: 112.5em) { @content };
+   }
+    
+}
