--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,6 +5,28 @@
     padding: 0;
     box-sizing: inherit;
 }
-html { font-size: 62.5%; }
+html { 
+    font-size: 62.5%; 
 
-body { box-sizing: border-box; }
+    @include respond(tab-land) {
+        font-size: 56.25%; // 9px = 1rem --> 9 / 16 = 56.25%
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%; // 8px = 1rem --> 8 /16 = 50%
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%; // 12px = 1rem --> 12 / 16 = 75%
+    }
+
+}
+
+body { 
+    box-sizing: border-box; 
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    } 
+}
