--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,9 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
     
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
 
     &__logo-box {
         text-align: center;
@@ -41,6 +44,11 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -58,6 +66,11 @@
         padding-top: 3rem;
         width: 80%;
         float: right;
+
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 
 }
