--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -17,6 +17,15 @@
         text-align: center;
         cursor: pointer;
         box-shadow: 0 1rem 3rem rgba($color-black, .3);
+
+        @include respond(tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+        @include respond(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
     }
 
     &__background {
@@ -30,7 +39,15 @@
         z-index: 1000;
 
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
-
+        
+        @include respond(tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+        @include respond(phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
     }
 
     &__nav {
@@ -71,7 +88,7 @@
             color: $color-white;
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
-            background-size: 225%;
+            background-size: 235%;
             transition: all .4s;
 
             span { margin-right: 1.5rem; }
