--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,15 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem  !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem  !important; } }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem  !important; }
+  margin-bottom: 5rem  !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem  !important; } }
 
 .u-margin-bottom-small {
   margin-bottom: 2rem  !important; }
@@ -334,15 +340,37 @@ body {
     transition: all .2s;
     z-index: 10;
     outline-offset: 2rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        position: relative;
+        float: left;
+        width: 33.33333333%;
+        transition: none;
+        box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--1 {
       top: -2rem;
       left: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo--1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo--2 {
       top: 12rem;
       left: 6rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--2 {
+          top: -2rem;
+          left: 0;
+          z-index: 100;
+          transform: scale(1.3); } }
     .composition__photo--3 {
       top: 4rem;
       right: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo--3 {
+          top: 1rem;
+          right: 0;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       transform: scale(1.05) translateY(0.5rem);
       box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.5);
@@ -360,6 +388,10 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.15);
   transition: transform .2s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem;
+      height: 30rem; } }
   .feature-box__icon {
     font-size: 6rem;
     background-image: linear-gradient(to right, #7ed56f, #28b485);
@@ -565,6 +597,9 @@ body {
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 5rem; } }
   .footer__logo {
     width: 15rem;
     height: auto; }
@@ -795,6 +830,9 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 20rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -804,15 +842,24 @@ body {
   transform: skewY(-7deg); }
   .section-features > * {
     transform: skewY(7deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   position: relative;
   padding: 15rem 0; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 .section-book {
   padding: 15rem 0;
