--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -10,20 +10,48 @@
         z-index: 10;
         outline-offset: 2rem;
 
+        @include respond(tab-port) {
+            position: relative;
+            float: left;
+            width: 33.33333333%;
+            transition: none;
+            box-shadow: 0 1rem 2rem rgba($color-black, .2);
+        }
+
 
         &--1 {
             top: -2rem;
             left: 0;
+
+            @include respond(tab-port) {
+                top: 0;
+
+                transform: scale(1.2);
+            }
         }
 
         &--2 {
             top: 12rem;
             left: 6rem;
+
+            @include respond(tab-port) {
+                top: -2rem;
+                left: 0;
+                z-index: 100;
+
+                transform: scale(1.3);
+            }
         }
 
         &--3 {
             top: 4rem;
             right: 0;
+
+            @include respond(tab-port) {
+                top: 1rem;
+                right: 0;
+                transform: scale(1.1);
+            }
         }
 
         &:hover {
