--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -8,6 +8,11 @@
     box-shadow: 0 1.5rem 3rem rgba($color-black, .15);
     transition: transform .2s;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+        height: 30rem;
+    }
+
     &__icon {
         font-size: 6rem;
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
